--- a/Gaming club-project/client/src/components/header/listItem/ListItem.module.css
+++ b/Gaming club-project/client/src/components/header/listItem/ListItem.module.css
@@ -28,6 +28,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16pt;
     padding: 5px;
+    cursor: pointer;
 }
 
 .listItem a:hover {
