--- a/Gaming club-project/client/src/components/main/catalog/catalogSearch/CatalogSearch.module.css
+++ b/Gaming club-project/client/src/components/main/catalog/catalogSearch/CatalogSearch.module.css
@@ -2,7 +2,7 @@
     display: block;
     margin: 0 auto;
     background-color: rgb(48, 46, 46);
-    width: 600px;
+    width: 800px;
     margin-top: 40px;
     margin-bottom: 40px;
 }
@@ -18,6 +18,7 @@
     color: aliceblue;
     font-size: 14pt;
     font-family: Arial, Helvetica, sans-serif;
+    padding-left: 7px;
 }
 
 .search button {
@@ -45,4 +46,18 @@
 
 .search input::placeholder {
     color: lightgray;
+}
+
+.search select {
+    display: inline-block;
+    margin-right: 30px;
+    width: 120px;
+    height: 50px;
+    border: none;
+    border-radius: 7px;
+    background-color: grey;
+    color: aliceblue;
+    font-size: 14pt;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 7px;
 }
