--- a/Gaming club-project/client/src/components/header/Header.module.css
+++ b/Gaming club-project/client/src/components/header/Header.module.css
@@ -13,8 +13,8 @@ body {
 }
 
 .navigation ul {
-    display: flex;
+    display: block;
     margin: 0 auto;
-    width: 1000px;
+    width: 700;
     height: auto;
 }
