--- a/Gaming club-project/client/src/components/games-details/GameDetails.module.css
+++ b/Gaming club-project/client/src/components/games-details/GameDetails.module.css
@@ -39,6 +39,7 @@
     width: 400px;
     height: 50px;
     margin-bottom: 30px;
+    margin-left: 40px;
 }
 
 .buttons button,
@@ -73,28 +74,30 @@ button {
     padding: 0 20px;
 }
 
+.buttons .delete {
+    background-color: red;
+}
+
+.buttons .delete:hover {
+    background-color: brown;
+}
+
 .buttons button:hover,
 button:hover {
     background-color: rgb(0, 225, 255);
     color: white;
 }
 
-button a {
-    text-decoration: none;
-    color: aliceblue;
-}
-
-.delete {
-    background-color: red;
-}
-
-.delete:hover {
-    background-color: brown;
-}
-
 .details a {
     color: aliceblue;
     text-decoration: none;
+}
+
+.likes i {
+    position: relative;
+    top: 35px;
+    color: red;
+    font-size: 24pt;
 }
 
 .likes a i {
@@ -110,16 +113,9 @@ button a {
     top: 20px;
 }
 
-.likes #creatorLikes {
-    position: relative;
-    top: 35px;
-    color: red;
-    font-size: 24pt;
-}
-
 .likes {
     display: inline-block;
-    margin-left: 125px;
+    margin-left: 100px;
 }
 
 .comments {
@@ -153,10 +149,11 @@ button a {
     height: auto;
     width: 750px;
     border-radius: 10px;
-    margin-top: 20px;
 }
 
-.commentContent form textarea {
+.commentContent form input {
+    position: relative;
+    bottom: 20px;
     width: 400px;
     height: 50px;
     border: none;
@@ -170,7 +167,7 @@ button a {
     margin-right: 30px;
 }
 
-.commentContent form textarea::placeholder {
+.commentContent form input::placeholder {
     font-family: Arial, Helvetica, sans-serif;
     color: aliceblue;
 }
@@ -179,6 +176,11 @@ button a {
     display: inline-block;
     position: relative;
     bottom: 20px;
+}
+
+.commentContent form button a {
+    text-decoration: none;
+    color: aliceblue;
 }
 
 .commentContent {
@@ -216,7 +218,7 @@ button a {
     margin-top: -10px;
 }
 
-.commentContent .your-comment {
+.commentContent .yourComment {
     background-color: rgb(3, 194, 247);
 }
 
@@ -239,7 +241,7 @@ button a {
 .saves {
     display: inline-block;
     margin-right: 125px;
-    margin-left: -50px;
+    margin-left: 30px;
 }
 
 .saves i {
