--- a/Gaming club-project/client/src/components/FormsAndErrors.module.css
+++ b/Gaming club-project/client/src/components/FormsAndErrors.module.css
@@ -4,6 +4,7 @@
     margin-top: 30px;
     margin-bottom: 120px;
     padding: 10px;
+    padding-bottom: 20px;
     width: 600px;
     height: auto;
     background-color: rgb(89, 86, 86);
