--- a/Gaming club-project/client/src/components/FormsAndErrors.module.css
+++ b/Gaming club-project/client/src/components/FormsAndErrors.module.css
@@ -1,3 +1,15 @@
+.modal {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 700px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+}
+
 .form {
     display: block;
     margin: 0 auto;
@@ -35,6 +47,11 @@
     padding-left: 5px;
 }
 
+.form input::placeholder,
+.form textarea::placeholder {
+    color: lightgray;
+}
+
 .form button {
     display: block;
     margin: 0 auto;
@@ -70,10 +87,16 @@
     color: red;
 }
 
+.errorMessage {
+    color: red;
+    font-size: 14pt;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .error {
     position: fixed;
-    right: 100px;
-    top: 100px;
+    top: 30px;
+    right: 70px;
     width: 220px;
     height: auto;
     font-size: 18pt;
