--- a/Gaming club-project/client/src/components/games-details/GameDetails.module.css
+++ b/Gaming club-project/client/src/components/games-details/GameDetails.module.css
@@ -140,6 +140,10 @@ button:hover {
     padding: 5px;
 }
 
+.comments details summary {
+    cursor: pointer;
+}
+
 .comments details span {
     margin-left: 20px;
 }
