add like and unlike functionallity

--- a/Gaming club-project/client/src/components/games-details/GameDetails.module.css
+++ b/Gaming club-project/client/src/components/games-details/GameDetails.module.css
@@ -94,18 +94,20 @@ button:hover {
     text-decoration: none;
 }
 
-.likes i {
+
+/* .likes .fa-solid-fa-heart {
     position: relative;
     top: 35px;
     color: red;
     font-size: 24pt;
-}
+} */
 
-.likes a i {
+.likes i {
     position: relative;
     top: 35px;
     font-size: 24pt;
     color: aliceblue;
+    cursor: pointer;
 }
 
 .likes p {
