--- a/Gaming club-project/client/src/components/FormsAndErrors.module.css
+++ b/Gaming club-project/client/src/components/FormsAndErrors.module.css
@@ -88,3 +88,10 @@
     font-size: 14pt;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.editComment input,
+.editComment button {
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
