--- a/Gaming club-project/client/src/components/catalog/Catalog.module.css
+++ b/Gaming club-project/client/src/components/catalog/Catalog.module.css
@@ -1,3 +1,12 @@
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 h1 {
     text-align: center;
     color: aliceblue;
@@ -15,4 +24,16 @@ h1 {
     margin: 0 auto;
     margin-bottom: 175px;
     border-radius: 20px;
+}
+
+.loading {
+    display: block;
+    position: absolute;
+    top: 65%;
+    left: 47%;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: inset 10px rgb(0, 205, 255);
+    animation: rotate 1s linear infinite;
 }
