--- a/Gaming club-project/client/src/components/profile/Profile.module.css
+++ b/Gaming club-project/client/src/components/profile/Profile.module.css
@@ -23,23 +23,27 @@
     margin-top: 20px;
     width: 1400px;
     height: auto;
+    margin-bottom: 100px;
 }
 
-.profileSection {
+
+/* .profileSection {
     display: inline-block;
     margin-top: 10px;
-    width: 600px;
+    width: 1200px;
     height: auto;
     margin-left: 40px;
     margin-bottom: 125px;
-}
+} */
 
 .profileSection {
     display: inline-block;
     position: relative;
     margin: 20px;
-    width: 550px;
+    width: 1200px;
+    height: auto;
     padding-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .profileContent {
@@ -47,7 +51,7 @@
     margin: 0 auto;
     margin-top: 20px;
     background-color: rgb(89, 86, 86);
-    width: 400px;
+    width: 600px;
     height: auto;
     font-size: 14pt;
     color: aliceblue;
@@ -57,7 +61,18 @@
     padding-bottom: 20px;
 }
 
-.profileContent div img {
+.profileDivContent {
+    display: block;
+    background-color: grey;
+    border-radius: 10px;
+    width: 400px;
+    height: auto;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.profileDivContent img {
     display: block;
     margin: 0 auto;
     margin-top: 20px;
@@ -66,7 +81,7 @@
     border-radius: 7px;
 }
 
-.profileContent div button {
+.profileDivContent button {
     display: block;
     margin: 0 auto;
     width: auto;
@@ -78,12 +93,12 @@
     cursor: pointer;
 }
 
-.profileContent div button:hover {
+.profileDivContent button:hover {
     background-color: rgb(0, 225, 255);
     color: white;
 }
 
-.profileContent div a {
+.profileDivContent a {
     display: block;
     text-decoration: none;
     width: 100px;
