--- a/Gaming club-project/client/src/components/profile/Profile.module.css
+++ b/Gaming club-project/client/src/components/profile/Profile.module.css
@@ -1,3 +1,12 @@
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .profile {
     display: block;
     margin: 0 auto;
@@ -21,26 +30,16 @@
     display: flex;
     margin: 0 auto;
     margin-top: 20px;
-    width: 1400px;
+    width: 1200px;
     height: auto;
     margin-bottom: 100px;
 }
-
-
-/* .profileSection {
-    display: inline-block;
-    margin-top: 10px;
-    width: 1200px;
-    height: auto;
-    margin-left: 40px;
-    margin-bottom: 125px;
-} */
 
 .profileSection {
     display: inline-block;
     position: relative;
     margin: 20px;
-    width: 1200px;
+    width: 1000px;
     height: auto;
     padding-bottom: 20px;
     font-family: Arial, Helvetica, sans-serif;
@@ -51,12 +50,12 @@
     margin: 0 auto;
     margin-top: 20px;
     background-color: rgb(89, 86, 86);
-    width: 600px;
+    width: 500px;
     height: auto;
-    font-size: 14pt;
+    font-size: 16pt;
     color: aliceblue;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 15px;
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -65,19 +64,20 @@
     display: block;
     background-color: grey;
     border-radius: 10px;
-    width: 400px;
+    width: 300px;
     height: auto;
     margin: 0 auto;
     padding: 20px;
     margin-top: 20px;
+    font-size: 10pt;
 }
 
 .profileDivContent img {
     display: block;
     margin: 0 auto;
     margin-top: 20px;
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 200px;
     border-radius: 7px;
 }
 
@@ -104,4 +104,16 @@
     width: 100px;
     height: 50px;
     margin: 0 auto;
+}
+
+.loading {
+    display: block;
+    position: absolute;
+    top: 65%;
+    left: 48%;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: inset 10px rgb(0, 205, 255);
+    animation: rotate 1s linear infinite;
 }
