--- a/Gaming club-project/client/src/components/catalog/Catalog.module.css
+++ b/Gaming club-project/client/src/components/catalog/Catalog.module.css
@@ -7,6 +7,24 @@
     }
 }
 
+@keyframes hovering {
+    20% {
+        color: aliceblue;
+    }
+    40% {
+        color: rgb(127, 205, 231);
+    }
+    60% {
+        color: rgb(5, 211, 243);
+    }
+    80% {
+        color: rgb(0, 213, 255);
+    }
+    100% {
+        color: rgb(0, 205, 255);
+    }
+}
+
 h1 {
     text-align: center;
     color: aliceblue;
@@ -22,7 +40,7 @@ h1 {
     background-color: rgb(89, 86, 86);
     padding: 20px;
     margin: 0 auto;
-    margin-bottom: 175px;
+    margin-bottom: 10px;
     border-radius: 20px;
 }
 
@@ -36,4 +54,37 @@ h1 {
     border-radius: 50%;
     border: inset 10px rgb(0, 205, 255);
     animation: rotate 1s linear infinite;
+}
+
+.paginationButtons {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 120px;
+    width: 280px;
+    background-color: rgb(89, 86, 86);
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 15px;
+}
+
+.paginationButtons button {
+    display: inline-block;
+    margin: 0 auto;
+    margin-right: -10px;
+    background-color: rgb(89, 86, 86);
+    color: aliceblue;
+    font-size: 18pt;
+}
+
+.paginationButtons button:hover {
+    background-color: rgb(89, 86, 86);
+    animation: hovering 1s;
+    animation-fill-mode: forwards;
+}
+
+.paginationButtons p {
+    display: inline-block;
+    margin: -10px auto;
+    color: aliceblue;
+    text-align: center;
+    font-size: 16pt;
 }
