--- a/Gaming club-project/client/src/components/game-delete/GameDelete.module.css
+++ b/Gaming club-project/client/src/components/game-delete/GameDelete.module.css
@@ -4,8 +4,8 @@
     background-color: rgb(89, 86, 86);
     width: 400px;
     height: 200px;
-    /* margin-top: 400px; */
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
     color: aliceblue;
     padding: 10px;
     text-align: center;
