--- a/Gaming club-project/client/src/components/FormsAndErrors.module.css
+++ b/Gaming club-project/client/src/components/FormsAndErrors.module.css
@@ -52,9 +52,17 @@
     color: lightgray;
 }
 
-.form button {
+.buttons {
     display: block;
     margin: 0 auto;
+    width: 300px;
+    height: auto;
+}
+
+.form button {
+    display: inline-block;
+    margin: 0 auto;
+    margin-left: 20px;
     margin-top: 20px;
     width: auto;
     height: 50px;
