--- a/Gaming club-project/client/src/components/games-details/GameDetails.module.css
+++ b/Gaming club-project/client/src/components/games-details/GameDetails.module.css
@@ -242,7 +242,7 @@ button:hover {
 .commentContent div {
     display: block;
     width: 730px;
-    height: 100px;
+    height: auto;
     text-align: left;
     background-color: grey;
     border-radius: 10px;
@@ -261,6 +261,8 @@ button:hover {
     display: block;
     margin-left: 10px;
     margin-top: -10px;
+    height: auto;
+    word-wrap: break-word;
 }
 
 .commentContent .yourComment {
@@ -268,7 +270,7 @@ button:hover {
 }
 
 .commentContent div h3 span {
-    color: rgb(166, 163, 163);
+    color: lightgray;
     margin-left: 7px;
     font-size: 16pt;
 }
