Implemented error boundry

--- a/Gaming club-project/client/src/components/status404/Status404.module.css
+++ b/Gaming club-project/client/src/components/status404/Status404.module.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
     background-color: rgb(89, 86, 86);
     width: 400px;
-    height: 200px;
+    height: auto;
     margin-top: 200px;
     font-family: Arial, Helvetica, sans-serif;
     color: aliceblue;
