--- a/Gaming club-project/client/src/components/footer/Footer.module.css
+++ b/Gaming club-project/client/src/components/footer/Footer.module.css
@@ -31,13 +31,14 @@
 .footer div {
     display: inline-block;
     font-size: 14pt;
-    margin-right: 1150px;
-    margin-left: 100px
+    margin-left: 100px;
+    margin-right: 1000px;
 }
 
 .footer ul {
     display: inline-block;
-    margin-right: 100px;
+    position: fixed;
+    right: 100px;
 }
 
 .footer ul li {
