--- a/Delicious food restaurant/client/src/components/header/navItems/NavItem.module.css
+++ b/Delicious food restaurant/client/src/components/header/navItems/NavItem.module.css
@@ -1,21 +1,21 @@
 @keyframes hovering {
-    0% {
-        color: rgb(127, 132, 132)
-    }
-    20% {
-        color: rgb(135, 145, 156)
-    }
-    40% {
-        color: rgb(150, 160, 170)
-    }
-    60% {
-        color: rgb(175, 180, 200)
+    100% {
+        color: rgb(166, 158, 167)
     }
     80% {
-        color: rgb(196, 200, 204)
+        color: rgb(180, 186, 180)
     }
-    100% {
-        color: rgb(210, 215, 223)
+    60% {
+        color: rgb(190, 190, 184)
+    }
+    40% {
+        color: rgb(210, 210, 200)
+    }
+    20% {
+        color: rgb(220, 220, 204)
+    }
+    0% {
+        color: rgb(255, 255, 255)
     }
 }
 
@@ -27,7 +27,7 @@
 
 .item a {
     text-decoration: none;
-    color: rgb(127, 132, 132);
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14pt;
 }
