--- a/Delicious food restaurant/client/src/components/header/navItems/NavItem.module.css
+++ b/Delicious food restaurant/client/src/components/header/navItems/NavItem.module.css
@@ -21,8 +21,10 @@
 
 .item {
     display: inline-block;
+    position: relative;
     margin-right: 20px;
     text-decoration: none;
+    bottom: 40px;
 }
 
 .item a {
