--- a/Delicious food restaurant/client/src/components/FormsAndErrors.module.css
+++ b/Delicious food restaurant/client/src/components/FormsAndErrors.module.css
@@ -49,3 +49,23 @@
 .form button:hover {
     background-color: yellow;
 }
+
+.error {
+    border: solid red 2px;
+}
+
+.errorParagraph {
+    position: relative;
+    color: red;
+    font-size: 12pt;
+    font-family: Arial, Helvetica, sans-serif;
+    right: 72px;
+    bottom: 15px;
+}
+
+.errorDontMatch {
+    text-align: center;
+    color: red;
+    font-size: 12pt;
+    font-family: Arial, Helvetica, sans-serif;
+}
