--- a/Delicious food restaurant/client/src/components/FormsAndErrors.module.css
+++ b/Delicious food restaurant/client/src/components/FormsAndErrors.module.css
@@ -13,7 +13,8 @@
     background-color: rgb(5, 125, 47);
 }
 
-.form input {
+.form input,
+.form textarea {
     display: block;
     margin: 0 auto;
     width: 400px;
@@ -22,6 +23,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: 14pt;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .form a {
