--- a/Delicious food restaurant/client/src/components/details/Details.module.css
+++ b/Delicious food restaurant/client/src/components/details/Details.module.css
@@ -1,3 +1,12 @@
+@keyframes rotating {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .wrapper {
     display: block;
     margin: 0 auto;
@@ -53,4 +62,28 @@
     text-align: left;
     font-size: 16pt;
     word-break: break-word;
+}
+
+.loadingSpinner {
+    display: block;
+    width: 75px;
+    height: 75px;
+    position: absolute;
+    left: 47%;
+    bottom: 40%;
+    border-radius: 50%;
+    border: inset 10px yellow;
+    animation: rotating 1s linear infinite;
+}
+
+.message {
+    display: block;
+    margin: 0 auto;
+    margin-top: 200px;
+    width: 400px;
+    font-size: 22pt;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: inset 1px 1px 20px 1px grey;
 }
