--- a/Delicious food restaurant/client/src/components/details/Details.module.css
+++ b/Delicious food restaurant/client/src/components/details/Details.module.css
@@ -29,7 +29,6 @@
     width: 400px;
     height: 400px;
     border-radius: 10px;
-    margin-right: 10px;
 }
 
 .detailsHeader div {
@@ -40,13 +39,13 @@
 
 .detailsHeader div h2 {
     position: relative;
-    bottom: 320px;
+    bottom: 200px;
     text-align: center;
 }
 
 .detailsHeader div p {
     position: relative;
-    bottom: 320px;
+    bottom: 180px;
     text-align: center;
     font-size: 16pt;
     word-break: break-word;
@@ -86,4 +85,83 @@
     padding: 30px;
     border-radius: 10px;
     box-shadow: inset 1px 1px 20px 1px grey;
+}
+
+.buttons {
+    position: relative;
+    bottom: 180px;
+    display: block;
+    margin: 0 auto;
+    width: 300px;
+    height: auto;
+    text-align: center;
+}
+
+.buttons a {
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.buttons a button {
+    width: 100px;
+    height: 50px;
+    background-color: rgb(205, 205, 6);
+    border: none;
+    border-radius: 10px;
+    font-size: 16pt;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
+
+.buttons a button:hover {
+    background-color: yellow;
+}
+
+.buttons a i {
+    position: relative;
+    bottom: 5px;
+    font-size: 24pt;
+    color: black
+}
+
+.buttons div {
+    position: relative;
+    display: inline-block;
+    top: 40px;
+    width: 30px;
+    height: 30px;
+}
+
+.buttons div p {
+    position: relative;
+    left: 21px;
+    bottom: 25px;
+}
+
+.guestButtons p {
+    position: relative;
+    left: 17px;
+    bottom: 25px;
+}
+
+.guestButtons i {
+    position: relative;
+    left: 200px;
+    bottom: 170px;
+    font-size: 24pt;
+    color: red;
+}
+
+.adminButtons i {
+    position: relative;
+    top: 3px;
+    left: 20px;
+    font-size: 24pt;
+    color: red;
+}
+
+.adminButtons p {
+    position: relative;
+    left: 30px;
+    top: -10px;
 }
