--- a/Delicious food restaurant/client/src/components/details/Details.module.css
+++ b/Delicious food restaurant/client/src/components/details/Details.module.css
@@ -33,6 +33,7 @@
 
 .detailsHeader div {
     display: inline-block;
+    margin-top: -20px;
     height: auto;
     width: 400px;
 }
@@ -89,7 +90,8 @@
 
 .buttons {
     position: relative;
-    bottom: 180px;
+    bottom: 150px;
+    right: 10px;
     display: block;
     margin: 0 auto;
     width: 300px;
@@ -141,7 +143,7 @@
 .buttons .unlike i {
     position: relative;
     left: 20px;
-    bottom: 5px;
+    bottom: 7px;
     font-size: 24pt;
     cursor: pointer;
     color: red;
@@ -150,7 +152,7 @@
 .buttons .like i {
     position: relative;
     left: 20px;
-    bottom: 5px;
+    bottom: 7px;
     font-size: 24pt;
     cursor: pointer;
     color: black;
@@ -159,13 +161,13 @@
 .guestButtons p {
     position: relative;
     left: 17px;
-    bottom: 25px;
+    bottom: 26px;
 }
 
 .guestButtons i {
     position: relative;
     left: 200px;
-    bottom: 170px;
+    bottom: 160px;
     font-size: 24pt;
     color: red;
 }
