--- a/Delicious food restaurant/client/src/components/editDish/EditDish.module.css
+++ b/Delicious food restaurant/client/src/components/editDish/EditDish.module.css
@@ -48,7 +48,7 @@
 }
 
 .form button {
-    display: block;
+    display: inline-block;
     margin: 0 auto;
     width: 100px;
     height: 50px;
@@ -58,6 +58,7 @@
     font-size: 16pt;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
+    margin-right: 30px;
 }
 
 .form button:hover {
