--- a/Delicious food restaurant/client/src/components/details/Details.module.css
+++ b/Delicious food restaurant/client/src/components/details/Details.module.css
@@ -21,7 +21,7 @@
 
 .detailsHeader {
     display: block;
-    width: 1000px;
+    width: 800px;
     height: auto;
 }
 
@@ -54,14 +54,14 @@
 
 .detailsBody {
     display: block;
-    width: 950px;
+    width: 800px;
     height: auto;
 }
 
 .detailsBody p {
     text-align: left;
     font-size: 16pt;
-    word-break: break-word;
+    word-wrap: break-word;
 }
 
 .loadingSpinner {
