--- a/Delicious food restaurant/client/src/components/catalog/Catalog.module.css
+++ b/Delicious food restaurant/client/src/components/catalog/Catalog.module.css
@@ -14,7 +14,7 @@
     width: 1250px;
     height: auto;
     margin: 0 auto;
-    margin-bottom: 100px;
+    margin-bottom: 10px;
     margin-top: 20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -90,4 +90,33 @@
     border-radius: 50%;
     border: inset 10px yellow;
     animation: rotating 1s linear infinite;
+}
+
+.pagination {
+    display: block;
+    margin: 0 auto;
+    width: 300px;
+    height: 50px;
+    margin-bottom: 200px;
+}
+
+.pagination i {
+    display: inline-block;
+    margin: 5px;
+    font-size: 16pt;
+    background-color: rgb(205, 205, 6);
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.pagination i:hover {
+    background-color: yellow;
+}
+
+.pagination p {
+    display: inline-block;
+    margin: 5px;
+    font-size: 16pt;
+    font-family: Arial, Helvetica, sans-serif;
 }
