--- a/Delicious food restaurant/client/src/components/catalog/Catalog.module.css
+++ b/Delicious food restaurant/client/src/components/catalog/Catalog.module.css
@@ -93,11 +93,11 @@
 }
 
 .pagination {
-    display: block;
+    display: flex;
     margin: 0 auto;
-    width: 300px;
+    width: 320px;
     height: 50px;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 
 .pagination i {
@@ -110,13 +110,24 @@
     cursor: pointer;
 }
 
+
+/* .pagination i:nth-child(2) {
+    margin-right: 70px;
+} */
+
 .pagination i:hover {
     background-color: yellow;
 }
 
 .pagination p {
     display: inline-block;
-    margin: 5px;
     font-size: 16pt;
+    margin-top: 12px;
+    margin-left: 10px;
+    margin-right: 10px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.invisible {
+    visibility: hidden;
 }
