--- a/Delicious food restaurant/client/src/components/profile/Profile.module.css
+++ b/Delicious food restaurant/client/src/components/profile/Profile.module.css
@@ -45,7 +45,7 @@
     width: 1250px;
     height: auto;
     margin: 0 auto;
-    margin-bottom: 100px;
+    margin-bottom: 10px;
     margin-top: 20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -157,4 +157,39 @@
 
 .userBody div a button:hover {
     background-color: yellow;
+}
+
+.pagination {
+    display: flex;
+    margin: 0 auto;
+    width: 320px;
+    height: 50px;
+    margin-bottom: 100px;
+}
+
+.pagination i {
+    display: inline-block;
+    margin: 5px;
+    font-size: 16pt;
+    background-color: rgb(205, 205, 6);
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.pagination i:hover {
+    background-color: yellow;
+}
+
+.pagination p {
+    display: inline-block;
+    font-size: 16pt;
+    margin-top: 12px;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.invisible {
+    visibility: hidden;
 }
