--- a/Delicious food restaurant/client/src/components/details/Details.module.css
+++ b/Delicious food restaurant/client/src/components/details/Details.module.css
@@ -99,11 +99,6 @@
     text-align: center;
 }
 
-.buttons a {
-    display: inline-block;
-    margin-left: 20px;
-}
-
 .buttons button {
     width: 100px;
     height: 50px;
@@ -113,6 +108,7 @@
     font-size: 16pt;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
+    margin-right: 15px;
 }
 
 .buttons button:hover {
@@ -122,8 +118,9 @@
 .buttons a i {
     position: relative;
     bottom: 5px;
+    left: 10px;
     font-size: 24pt;
-    color: black
+    color: black;
 }
 
 .buttons div {
@@ -134,15 +131,20 @@
     height: 30px;
 }
 
-.buttons div p {
+.buttons div a p {
     position: relative;
-    left: 21px;
+    left: 42px;
     bottom: 25px;
+}
+
+.buttons div a {
+    text-decoration: none;
+    color: black;
 }
 
 .buttons .unlike i {
     position: relative;
-    left: 20px;
+    left: 40px;
     bottom: 7px;
     font-size: 24pt;
     cursor: pointer;
@@ -151,7 +153,7 @@
 
 .buttons .like i {
     position: relative;
-    left: 20px;
+    left: 40px;
     bottom: 7px;
     font-size: 24pt;
     cursor: pointer;
@@ -162,6 +164,7 @@
     background-color: rgb(5, 125, 47);
     color: white;
     cursor: default;
+    margin-right: 15px;
 }
 
 .buttons .added:hover {
@@ -171,7 +174,7 @@
 
 .guestButtons p {
     position: relative;
-    left: 17px;
+    left: 16px;
     bottom: 26px;
 }
 
@@ -185,14 +188,17 @@
 
 .adminButtons i {
     position: relative;
-    top: 3px;
+    bottom: 20px;
     left: 20px;
     font-size: 24pt;
     color: red;
 }
 
-.adminButtons p {
+.adminButtons a {
     position: relative;
-    left: 30px;
-    top: -10px;
+    left: 21px;
+    bottom: 13px;
+    text-decoration: none;
+    color: black;
+    font-size: 16pt;
 }
