--- a/Delicious food restaurant/client/src/components/dishLikes/DishLikes.module.css
+++ b/Delicious food restaurant/client/src/components/dishLikes/DishLikes.module.css
@@ -48,8 +48,9 @@
 
 .wrapper div p {
     display: inline-block;
-    margin: 0 auto;
+    text-align: center;
     margin-top: 13px;
+    margin-right: 30px;
     font-size: 16pt;
 }
 
@@ -70,4 +71,8 @@
 
 .wrapper button:hover {
     background-color: yellow;
+}
+
+.wrapper .yourLike {
+    background-color: rgb(255, 255, 0);
 }
