--- a/Delicious food restaurant/client/src/components/profile/Profile.module.css
+++ b/Delicious food restaurant/client/src/components/profile/Profile.module.css
@@ -13,7 +13,7 @@
     height: 75px;
     position: absolute;
     left: 47%;
-    bottom: 40%;
+    bottom: 20%;
     border-radius: 50%;
     border: inset 10px yellow;
     animation: rotating 1s linear infinite;
@@ -192,4 +192,17 @@
 
 .invisible {
     visibility: hidden;
+}
+
+.message {
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+    width: 400px;
+    font-size: 22pt;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: inset 1px 1px 20px 1px grey;
+    text-align: center;
 }
