--- a/Delicious food restaurant/client/src/components/dishLikes/DishLikes.module.css
+++ b/Delicious food restaurant/client/src/components/dishLikes/DishLikes.module.css
@@ -12,9 +12,8 @@
 
 .wrapper {
     display: block;
-    position: fixed;
-    left: 40%;
-    bottom: 50%;
+    margin: 0 auto;
+    margin-top: 100px;
     width: 400px;
     height: auto;
     padding: 10px;
