--- a/Gaming club-project/client/src/components/games-details/GameDetails.module.css
+++ b/Gaming club-project/client/src/components/games-details/GameDetails.module.css
@@ -269,10 +269,8 @@ button:hover {
     background-color: rgb(3, 194, 247);
 }
 
-.commentContent div h3 span {
-    color: lightgray;
-    margin-left: 7px;
-    font-size: 16pt;
+.commentContent .ownerComment {
+    color: lightgrey;
 }
 
 .commentContent div a {
@@ -340,4 +338,59 @@ button:hover {
     color: red;
     font-size: 14pt;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.commentContent div .userLike {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+}
+
+.commentContent div .userLike i {
+    position: relative;
+    left: 545px;
+    top: 7px;
+    font-size: 18pt;
+    cursor: pointer;
+}
+
+.commentContent div .userLike i[name="liked"] {
+    position: relative;
+    left: 545px;
+    top: 7px;
+    font-size: 18pt;
+    cursor: pointer;
+    color: red;
+}
+
+.commentContent div .userLike p {
+    position: relative;
+    left: 565px;
+    bottom: 8px;
+    font-size: 14pt;
+}
+
+.commentContent div .ownerLike {
+    display: inline-block;
+    position: relative;
+    right: 20px;
+    top: 5px;
+    background-color: rgb(3, 194, 247);
+    width: 50px;
+    height: 50px;
+}
+
+.commentContent div .ownerLike i {
+    position: relative;
+    left: 490px;
+    top: 7px;
+    font-size: 18pt;
+    color: red;
+}
+
+.commentContent div .ownerLike p {
+    position: relative;
+    left: 510px;
+    top: -8px;
+    font-size: 14pt;
 }
