--- a/Gaming club-project/client/src/components/games-details/GameDetails.module.css
+++ b/Gaming club-project/client/src/components/games-details/GameDetails.module.css
@@ -241,6 +241,7 @@ button:hover {
 
 .commentContent div {
     display: block;
+    position: relative;
     width: 730px;
     height: auto;
     text-align: left;
@@ -253,8 +254,8 @@ button:hover {
 }
 
 .commentContent div h3 {
-    display: inline-block;
     margin-left: 10px;
+    display: inline-block;
 }
 
 .commentContent div p {
@@ -269,7 +270,10 @@ button:hover {
     background-color: rgb(3, 194, 247);
 }
 
-.commentContent .ownerComment {
+.commentContent span {
+    display: inline-block;
+    position: relative;
+    left: -15px;
     color: lightgrey;
 }
 
@@ -342,22 +346,25 @@ button:hover {
 
 .commentContent div .userLike {
     display: inline-block;
+    position: absolute;
+    right: 30px;
+    top: 10px;
     width: 50px;
     height: 50px;
 }
 
 .commentContent div .userLike i {
     position: relative;
-    left: 545px;
-    top: 7px;
+    left: 10px;
+    top: 10px;
     font-size: 18pt;
     cursor: pointer;
 }
 
 .commentContent div .userLike i[name="liked"] {
     position: relative;
-    left: 545px;
-    top: 7px;
+    left: 10px;
+    top: 10px;
     font-size: 18pt;
     cursor: pointer;
     color: red;
@@ -365,16 +372,16 @@ button:hover {
 
 .commentContent div .userLike p {
     position: relative;
-    left: 565px;
-    bottom: 8px;
+    left: 30px;
+    top: -5px;
     font-size: 14pt;
 }
 
 .commentContent div .ownerLike {
     display: inline-block;
-    position: relative;
-    right: 20px;
-    top: 5px;
+    position: absolute;
+    right: 30px;
+    top: 10px;
     background-color: rgb(3, 194, 247);
     width: 50px;
     height: 50px;
@@ -382,15 +389,15 @@ button:hover {
 
 .commentContent div .ownerLike i {
     position: relative;
-    left: 500px;
-    top: 7px;
+    left: 10px;
+    top: 10px;
     font-size: 18pt;
     color: red;
 }
 
 .commentContent div .ownerLike p {
     position: relative;
-    left: 520px;
-    top: -8px;
+    left: 30px;
+    top: -5px;
     font-size: 14pt;
 }
