--- a/Delicious food restaurant/client/src/components/header/Header.module.css
+++ b/Delicious food restaurant/client/src/components/header/Header.module.css
@@ -6,7 +6,7 @@ body {
 
 .header {
     box-sizing: border-box;
-    display: block;
+    display: flex;
     width: 100vw;
     height: auto;
     background-color: rgb(5, 125, 47);
@@ -29,8 +29,25 @@ body {
 }
 
 .header li img {
+    display: inline-block;
     width: 100px;
     height: 100px;
     border-radius: 50%;
     margin-top: -25px;
+}
+
+@media(max-width:750px) {
+    .header ul {
+        display: block;
+    }
+    .header li {
+        display: block;
+        text-align: center;
+        margin-top: 10px;
+    }
+    .header li img {
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 50px;
+    }
 }
