--- a/Delicious food restaurant/client/src/components/catalog/catalog-search/CatalogSearch.module.css
+++ b/Delicious food restaurant/client/src/components/catalog/catalog-search/CatalogSearch.module.css
@@ -40,3 +40,13 @@
 .searchForm button:hover {
     background-color: yellow;
 }
+
+@media(max-width:750px) {
+    .searchForm button {
+        display: block;
+        margin-top: 20px;
+    }
+    .searchForm {
+        width: 500px;
+    }
+}
