--- a/Delicious food restaurant/client/src/components/home/Home.module.css
+++ b/Delicious food restaurant/client/src/components/home/Home.module.css
@@ -11,6 +11,7 @@
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     border-radius: 15px;
+    margin-bottom: 100px;
 }
 
 .home img {
