Implemented responsive details

--- a/Delicious food restaurant/client/src/components/FormsAndErrors.module.css
+++ b/Delicious food restaurant/client/src/components/FormsAndErrors.module.css
@@ -11,6 +11,7 @@
     font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
     background-color: rgb(5, 125, 47);
+    margin-bottom: 100px;
 }
 
 .form input,
