--- a/Delicious food restaurant/client/src/components/home/Home.module.css
+++ b/Delicious food restaurant/client/src/components/home/Home.module.css
@@ -21,3 +21,14 @@
     height: 400px;
     border-radius: 10px;
 }
+
+@media(max-width:550px) {
+    .home {
+        width: 400px;
+        font-size: 14pt;
+    }
+    .home img {
+        width: 300px;
+        height: 300px;
+    }
+}
