--- a/Delicious food restaurant/client/src/components/details/Details.module.css
+++ b/Delicious food restaurant/client/src/components/details/Details.module.css
@@ -203,20 +203,22 @@
     font-size: 16pt;
 }
 
-@media(max-width:750px) {
+@media(max-width:550px) {
     .wrapper {
-        width: 450px;
+        width: 300px;
         margin-bottom: 100px;
     }
     .detailsHeader {
         display: block;
-        width: 450px;
+        width: 300px;
         height: auto;
     }
     .detailsHeader img {
         display: block;
         margin: 0 auto;
         margin-bottom: 20px;
+        width: 200px;
+        height: 200px;
     }
     .detailsHeader div {
         display: block;
@@ -226,26 +228,30 @@
     .detailsHeader div h2 {
         display: block;
         bottom: 10px;
-        margin: 0 auto;
-        width: 400px;
+        text-align: center;
+        margin-left: 50px;
+        width: 200px;
         word-break: break-word;
+        font-size: 12pt;
     }
     .detailsHeader div p {
         display: block;
         bottom: 15px;
-        margin-right: 30px;
-        margin-left: 40px;
+        font-size: 12pt;
+        margin-top: 10px;
+        margin-right: 100px;
     }
     .detailsBody {
-        width: 450px;
+        width: 300px;
     }
     .detailsBody p {
         text-align: center;
+        font-size: 12pt;
     }
     .buttons {
         position: relative;
         bottom: 50px;
-        right: 10px;
+        right: 60px;
         display: block;
         margin: 0 auto;
         width: 300px;
@@ -253,15 +259,24 @@
         text-align: center;
     }
     .buttons button {
-        width: 100px;
-        height: 50px;
+        width: 75px;
+        height: 40px;
         background-color: rgb(205, 205, 6);
         border: none;
         border-radius: 10px;
-        font-size: 16pt;
+        font-size: 12pt;
         font-family: Arial, Helvetica, sans-serif;
         cursor: pointer;
         margin-right: 15px;
+    }
+    .adminButtons i {
+        font-size: 18pt;
+        left: 10px;
+        color: red;
+    }
+    .adminButtons a {
+        font-size: 12pt;
+        left: 11px;
     }
     .buttons button:hover {
         background-color: yellow;
@@ -270,7 +285,7 @@
         position: relative;
         bottom: 5px;
         left: 10px;
-        font-size: 24pt;
+        font-size: 18pt;
         color: black;
     }
     .buttons div {
@@ -282,26 +297,28 @@
     }
     .buttons div a p {
         position: relative;
-        left: 12px;
-        bottom: 25px;
+        left: 52px;
+        bottom: 27px;
+        font-size: 12pt;
     }
     .buttons div a {
         text-decoration: none;
         color: black;
+        font-size: 12pt;
     }
     .buttons .unlike i {
         position: relative;
         left: 40px;
-        bottom: 7px;
-        font-size: 24pt;
+        bottom: 20px;
+        font-size: 18pt;
         cursor: pointer;
         color: red;
     }
     .buttons .like i {
         position: relative;
         left: 40px;
-        bottom: 7px;
-        font-size: 24pt;
+        bottom: 20px;
+        font-size: 18pt;
         cursor: pointer;
         color: black;
     }
@@ -310,6 +327,7 @@
         color: white;
         cursor: default;
         margin-right: 15px;
+        font-size: 12pt;
     }
     .buttons .added:hover {
         background-color: rgb(5, 125, 47);
@@ -317,14 +335,15 @@
     }
     .guestButtons p {
         position: relative;
-        left: 13px;
-        bottom: 100px;
+        left: 0;
+        top: -40px;
+        font-size: 12pt;
     }
     .guestButtons i {
         position: relative;
-        left: 200px;
-        bottom: 0;
-        font-size: 24pt;
+        left: 138px;
+        bottom: 30px;
         color: red;
+        font-size: 18pt;
     }
 }
