--- a/Delicious food restaurant/client/src/components/catalog/Catalog.module.css
+++ b/Delicious food restaurant/client/src/components/catalog/Catalog.module.css
@@ -127,10 +127,30 @@
     visibility: hidden;
 }
 
-@media(max-width:900px) {
+@media(max-width:550px) {
+    h1 {
+        font-size: 14pt;
+    }
     .catalog {
+        width: 300px;
         display: block;
-        width: 500px;
+        font-size: 12pt;
+    }
+    .catalog div {
+        width: 200px;
+    }
+    .catalog div img {
+        width: 150px;
+        height: 150px;
+    }
+    .catalog div a {
+        width: 60px;
+        height: 30px;
+    }
+    .catalog div a button {
+        width: 60px;
+        height: 30px;
+        font-size: 12pt;
     }
     .loadingSpinner {
         bottom: 16%;
@@ -139,5 +159,16 @@
     .message {
         margin-top: 60px;
         margin-bottom: 20px;
+    }
+    .pagination {
+        width: 300px;
+        height: 50px;
+    }
+    .pagination i {
+        font-size: 12pt;
+        padding: 10px;
+    }
+    .pagination p {
+        font-size: 12pt;
     }
 }
