--- a/Delicious food restaurant/client/src/components/header/navItems/NavItem.module.css
+++ b/Delicious food restaurant/client/src/components/header/navItems/NavItem.module.css
@@ -38,3 +38,9 @@
     animation: hovering 0.5s;
     animation-fill-mode: forwards;
 }
+
+@media(max-width:550px) {
+    .item a {
+        font-size: 12pt;
+    }
+}
