--- a/Delicious food restaurant/client/src/components/cart/cart.module.css
+++ b/Delicious food restaurant/client/src/components/cart/cart.module.css
@@ -110,3 +110,60 @@
 .cartWrapper div button:hover {
     background-color: yellow;
 }
+
+@media(max-width:550px) {
+    .loadingSpinner {
+        width: 35px;
+        height: 35px;
+        bottom: 40%;
+        left: 45%;
+    }
+    .message {
+        display: block;
+        margin: 0 auto;
+        margin-top: 50px;
+        width: 100px;
+        font-size: 12pt;
+    }
+    .cartWrapper {
+        width: 350px;
+    }
+    .cartWrapper div {
+        width: 320px;
+        height: auto;
+        padding-top: 10px;
+    }
+    .cartWrapper div img {
+        display: block;
+        float: none;
+        margin: 0 auto;
+        width: 100px;
+        height: 100px;
+    }
+    .cartWrapper div p {
+        display: block;
+        float: none;
+        font-size: 12pt;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 10px;
+    }
+    .cartWrapper div button {
+        display: inline-block;
+        width: 70px;
+        height: 35px;
+        font-size: 12pt;
+        margin-left: 20px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+    .cartWrapper .buttons {
+        display: inline-block;
+        width: 70px;
+        height: 35px;
+        font-size: 12pt;
+        margin-left: 30px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+}
