--- a/Delicious food restaurant/client/src/components/editDish/EditDish.module.css
+++ b/Delicious food restaurant/client/src/components/editDish/EditDish.module.css
@@ -84,3 +84,27 @@
     font-size: 12pt;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+@media(max-width:550px) {
+    .form {
+        width: 300px;
+        font-size: 12pt;
+    }
+    .form input,
+    .form textarea {
+        width: 200px;
+        height: 30px;
+        font-size: 12pt;
+    }
+    .form button {
+        width: 60px;
+        height: 30px;
+        font-size: 12pt;
+    }
+    .errorParagraph {
+        font-size: 10pt;
+    }
+    .errorDontMatch {
+        font-size: 10pt;
+    }
+}
