--- a/Delicious food restaurant/client/src/components/orderDetails/OrderDetails.module.css
+++ b/Delicious food restaurant/client/src/components/orderDetails/OrderDetails.module.css
@@ -78,3 +78,38 @@
 .wrapper button:hover {
     background-color: yellow;
 }
+
+@media(max-width:550px) {
+    h2 {
+        font-size: 14pt;
+    }
+    .loadingSpinner {
+        width: 35px;
+        height: 35px;
+    }
+    .wrapper {
+        width: 350px;
+    }
+    .wrapper div {
+        width: 320px;
+        height: 70px;
+        padding: 10px;
+    }
+    .wrapper div img {
+        width: 65px;
+        height: 65px;
+        margin-top: 0;
+        margin-left: 0;
+    }
+    .wrapper div p {
+        width: 100px;
+        font-size: 12pt;
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+    .wrapper button {
+        width: 60px;
+        height: 30px;
+        font-size: 12pt;
+    }
+}
