Implement responsive like list and delete form

--- a/Delicious food restaurant/client/src/components/deleteDish/DeleteDish.module.css
+++ b/Delicious food restaurant/client/src/components/deleteDish/DeleteDish.module.css
@@ -39,3 +39,16 @@
 .deleteWrapper button:hover {
     background-color: yellow;
 }
+
+@media(max-width:550px) {
+    .deleteWrapper {
+        width: 300px;
+        height: auto;
+        left: 42.5%;
+    }
+    .deleteWrapper button {
+        width: 60px;
+        height: 30px;
+        font-size: 12pt;
+    }
+}
