--- a/Gaming club-project/client/src/components/footer/Footer.module.css
+++ b/Gaming club-project/client/src/components/footer/Footer.module.css
@@ -22,7 +22,7 @@
     background-color: rgb(89, 86, 86);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
+    width: 100vw;
     height: auto;
     display: block;
     padding: 10px;
@@ -31,7 +31,6 @@
 .footer div {
     display: inline-block;
     font-size: 14pt;
-    margin-left: 100px;
 }
 
 .footer ul {
@@ -57,4 +56,31 @@
 
 .footer ul li i {
     margin: 10px;
+}
+
+@media(max-width:750px) {
+    .footer {
+        padding-bottom: 40px;
+    }
+    .footer div {
+        display: block;
+        font-size: 12pt;
+        text-align: center;
+    }
+    .footer ul {
+        display: block;
+        margin: 0 auto;
+        margin-right: 0;
+        width: 300px;
+    }
+    .footer ul li {
+        margin-right: 10px;
+    }
+    .footer ul li a {
+        font-size: 12pt;
+    }
+    .footer ul li i {
+        margin: 5px;
+        font-size: 12pt;
+    }
 }
