--- a/Gaming club-project/client/src/components/header/Header.module.css
+++ b/Gaming club-project/client/src/components/header/Header.module.css
@@ -14,9 +14,9 @@ body {
 }
 
 .navigation ul {
-    display: block;
+    display: flex;
     margin: 0 auto;
-    width: 700px;
+    width: 800px;
     height: auto;
 }
 
@@ -26,6 +26,7 @@ body {
         padding-top: 10px;
     }
     .navigation ul {
+        display: block;
         width: 150px;
     }
 }
