--- a/Gaming club-project/client/src/components/home/Home.module.css
+++ b/Gaming club-project/client/src/components/home/Home.module.css
@@ -27,6 +27,7 @@
 @media(max-width:750px) {
     .home {
         width: 300px;
+        margin-bottom: 100px;
     }
     .home img {
         width: 300px;
